# mcpack

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
my-datapack/: pack.mcmeta
src/: cli.rs  elements.rs  lib.rs  main.rs  pack_formats.rs
src/commands/: add.rs  create.rs  info.rs  mod.rs  pack.rs  zip.rs
tests/: cli_tests.rs  command_tests.rs  elements_tests.rs  pack_formats_tests.rs
tests/cli_tests/: add_tests.rs  create_tests.rs  info_tests.rs  zip_tests.rs
