[package]
name = "mcpack"
version = "0.1.0"
edition = "2021"
about = "A CLI tool for managing minecraft datapacks"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rfd = "0.15.1"
walkdir = "2.5.0"
zip = "2.2.1"
indicatif = "0.17.9"
