[package]
name = "mcpack"
authors = ["fakerr"]
version = "0.2.0"
edition = "2021"
description = "A CLI tool for managing minecraft datapacks."

readme = "README.md"
homepage = "https://github.com/not-first/mcpack/"
repository = "https://github.com/not-first/mcpack/"
license = "MIT"

categories = ["command-line-utilities", "template-engine", "game-development"]
keywords = ["minecraft", "datapack", "cli"]

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rfd = "0.15.1"
walkdir = "2.5.0"
zip = "2.2.1"
indicatif = "0.17.9"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
tempfile = "3.14.0"
